fix: overlapping about text on project section

--- a/components/molecules/ProjectNameInfo/ProjectNameInfo.module.css
+++ b/components/molecules/ProjectNameInfo/ProjectNameInfo.module.css
@@ -40,6 +40,7 @@
     font-size: 2em;
     padding: 0 0.5em 0 0.7em ;
     background-color: #1e1e1e;
+    color: #ededed;
 }
 .projectname__wrapper__link{
     position: relative;
