--- a/components/molecules/ProjectNavigationSmall/ProjectNavigationSmall.module.css
+++ b/components/molecules/ProjectNavigationSmall/ProjectNavigationSmall.module.css
@@ -3,13 +3,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.2em;
     border-radius: 5px;
     overflow: hidden;
     background-color: #161616;
+    height: 100%;
 }
 .smallnav__wrapper__element{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
+    width: 100%;
+    height: 100%;
     font-size: 0.8em;
     color: #454545 ;
     padding: 0.3em 0.6em;
