--- a/components/templates/About/About.module.css
+++ b/components/templates/About/About.module.css
@@ -118,7 +118,6 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
     overflow: hidden;
 }
 .about__text__paragraph__text{
